Moved from CSS to SCSS, updated front-end.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,12 @@
+@import "./variables";
+
 * {
   box-sizing: border-box;
   margin:0;
   padding:0;
   font-family: 'Encode Sans Expanded', sans-serif;
+}
+
+body {
+  background: $main;
 }
