Added support to 1440p+ monitors

--- a/src/components/ContactMe/contact_style.scss
+++ b/src/components/ContactMe/contact_style.scss
@@ -6,9 +6,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 0px 28px 28px 28px;;
+    padding: 1rem 1.625rem 1.625rem 1.625rem;
     margin: 0px;
-    min-height: 680px;
+    min-height: 48rem;
     position: relative;
     z-index: 0;
 
@@ -36,7 +36,7 @@
 }
 
 .ContactPhoto {
-    height: 280px;
+    height: 17.5rem;
     margin: 1rem;
     margin-top: 3rem;
 }
