--- a/src/components/AboutMe/about_style.scss
+++ b/src/components/AboutMe/about_style.scss
@@ -4,7 +4,7 @@
     background: $main-dark;
     display: flex;
     flex-direction: column;
-    padding: 30px;
+    padding: 2rem;
     align-items: center;
     justify-content: center;
     position: relative;
@@ -14,19 +14,19 @@
 
 .AboutContent {
     z-index: 3;
-    min-height: 240px;
+    min-height: 15rem;
     width: 100%;
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
     background: none;
 }
 
 .AboutSection {
-    min-height: 320px;
-    width: 570px;
+    min-height: 20rem;
+    width: 35.625rem;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
@@ -41,9 +41,10 @@
     z-index: 3;
     position: relative;
     flex-direction: column;
-    padding: 8px 24px;
+    padding: .5rem 1.5rem;
     display: block;
     align-items: center;
+    text-align: left;
     background: none;
 
 }
@@ -51,35 +52,60 @@
 .AboutH1 {
     color: $text1;
     background: $main-dark;
-    font-size: 48px;
+    font-size: 3rem;
     margin:0;
-    text-align: center;
+    text-align: left;
 }
 
 .underline {
     padding: 0 0 3px 0;
     background: $underline;
-    margin-top: 24px;
+    margin: 1.5rem;
 }
 
 .AboutP {
-    margin: 24px;
+    margin: 1.5rem;
     color: $text1;
-    font-size: 24px;
-    text-align: center;
+    font-size: 1.25rem;
+    text-align: left;
     background: none;
 }
 
 
 .AboutArt {
-    margin: 24px;
-    width: 360px;
+    margin: 1.5rem;
+    width: 22.5rem;
     min-height: 230px;
     z-index: 10;
     background: $accent;
     mask: url("../../Photos/Responsive old.png") center/contain;
     mask-repeat: no-repeat;
 }
+
+.AboutLink {
+    position:relative;
+    background: $accent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-decoration: none;
+    font-size: inherit;
+}
+
+.AboutLink:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom:0;
+    width: 0%;
+    height: 2px;
+    background: $accent;
+    transition: width .2s cubic-bezier(1,0,0,1);
+    border-radius: 1rem;
+  }
+
+.AboutLink:hover:after {
+    width: 100%;
+  }
 
 @media screen and (max-width: 1280px) {
     .AboutContainer {
@@ -94,6 +120,14 @@
     }
 
 }
+
+@media only screen and (min-width: 1440px) {
+    
+    * {
+        font-size: 24px;
+    }
+}
+
 
 @media screen and (max-width: 768px) {
 
